--- a/kebi/at-tpc/macros/input/par_at-tpc.conf
+++ b/kebi/at-tpc/macros/input/par_at-tpc.conf
@@ -1,7 +1,7 @@
 ### Geant4 Random
 RandomEngine b true  # (true : Particle random generate) (false : Created as a file)
-### random generate particle selct
-RandomParticle s mu-  # Option (mu-, proton, 4He) // To be updated
+### random generate particle PDG Num selct
+RandomParticle s mu-  # Option (mu- =13, proton =2212, alpha =1000020040) // To be updated
 
 ### world size [mm]
 worldX d 100.
@@ -30,7 +30,7 @@ gemvolt d. 310.  # Gem Voltage [V]   // To be updataed
 DynamicRange d 120 # Dynamic Range [fC]
 NTbs i 512  # Number of Time bucket
 TBtime d 20  # Time Bucket [ns]
-NoiseOn b ture  # ADC Background on/off
+NoiseOn b true  # ADC Background on/off
 
 ### circumstance parameters 
 temperature d 20.  # [°C]
