0. apply the He4+iC4H10, He4, iC4H10 gases parameters. 1. modify the PhysicsList for a quick and accurate simulation. 2. modify bugs

--- a/at-tpc/macros/input/par_at-tpc.conf
+++ b/at-tpc/macros/input/par_at-tpc.conf
@@ -5,9 +5,9 @@ RandomEngine b true  # (true : Particle random generate) (false : Created as a f
 FastCalculate b true
 
 ### random generate particle
-RandomParticle s mu- # Option (mu-, proton, alpha, ion)
+RandomParticle s alpha # Option (mu-, proton, alpha, ion)
 IonInfo i[3] 5, 10, 0 # Ion Z, A, E
-ParticleEnergy d 4000 # Particle Kinetic Energy [MeV]
+ParticleEnergy d 5 # Particle Kinetic Energy [MeV]
 Event s 10 # total event number
 
 ### world size [mm] 
@@ -35,22 +35,24 @@ padRefAxis a[] x, y  # axis of Pad Plane
 ### B-field [Tesla] 
 bfieldX d 0.     
 bfieldY d 0.     
-bfieldZ d 0.
+bfieldZ d 1.5
 
 ### Electric parameters
+fixGainP10 b 1 # if the true, gain only calculate the P10 gain. (the other gas type is not calibrated yet)
 efield d 130.  # Drift Area E-field [V/cm]
-GemVolt d 330.  # Gem Voltage [V] 
+GemVolt d 340.  # Gem Voltage [V] 
 DynamicRange d 120. # Dynamic Range [fC]
 NTbs i 512  # Number of Time bucket
-TBtime d 10.  # Time Bucket [ns]
+TBtime d 50.  # Time Bucket [ns]
 NoiseOn b false  # ADC Background on/off
 
 ### circumstance parameters 
 temperature d 20.  # [°C] // To be updated
-pressure d 760.  # [Torr] // To be updated
+pressure d 760.  # [Torr] (38 ~ 760 Torr)
 
 ### gas Type
-detMatName s p10  # Option (p10, p20, 4He) // p20, 4He To be updated
+detMatName s p10  # Option (p10, 4He, iC4H10, 4He_iC4H10) 
+iC4H10Ratio d 10. # [%] when choice the 4He+iC4H10 gas, input the iC4H10 ratio. (0.5 ~ 20%)
 
 ### pad Type
 PadPlaneType s RectanglePad # Option (RectanglePad, HoneyCombPad)
