--- a/newTPC/macros/input/par_NewTPC.conf
+++ b/newTPC/macros/input/par_NewTPC.conf
@@ -5,7 +5,8 @@ RandomEngine b true  # (true : Particle random generate) (false : Created as a f
 FastCalculate b true
 
 ### random generate particle
-RandomParticle s alpha # Option (mu-, proton, e-, alpha, gamma)
+RandomParticle s alpha # Option (mu-, proton, alpha, ion)
+IonInfo i[3] 5, 10, 0 # Ion Z, A, E
 ParticleEnergy d 10 # Particle Kinetic Energy [MeV]
 Event s 30 # total event number
 
@@ -42,19 +43,21 @@ bfieldY d 0.
 bfieldZ d 1.5
 
 ### Electric parameters
+fixGainP10 b 1 # if the true, gain only calculate the P10 gain. (the other gas type is not calibrated yet)
 efield d 130.  # Drift Area E-field [V/cm]
-GemVolt d 415.  # Gem Voltage [V]
-DynamicRange d 1000. # Dynamic Range [fC]
+GemVolt d 340.  # Gem Voltage [V] 
+DynamicRange d 120. # Dynamic Range [fC]
 NTbs i 512  # Number of Time bucket
-TBtime d 60.  # Time Bucket [ns]
+TBtime d 50.  # Time Bucket [ns]
 NoiseOn b false  # ADC Background on/off
 
 ### circumstance parameters 
 temperature d 20.  # [°C] // To be updated
-pressure d 76.  # [Torr] // To be updated
+pressure d 760.  # [Torr] (38 ~ 760 Torr)
 
 ### gas Type
-detMatName s 4He  # Option (p10, p20, 4He) // p20 To be updated
+detMatName s p10  # Option (p10, 4He, iC4H10, 4He_iC4H10) 
+iC4H10Ratio d 10. # [%] when choice the 4He+iC4H10 gas, input the iC4H10 ratio. (0.5 ~ 20%)
 
 ### pad Type
 PadPlaneType s HoneyCombPad # Option (HoneyCombPad)
