--- a/newTPC/macros/input/par_NewTPC.conf
+++ b/newTPC/macros/input/par_NewTPC.conf
@@ -5,10 +5,10 @@ RandomEngine b true  # (true : Particle random generate) (false : Created as a f
 FastCalculate b true
 
 ### random generate particle
-RandomParticle s alpha # Option (mu-, proton, alpha, ion)
+RandomParticle s proton # Option (mu-, proton, alpha, ion)
 IonInfo i[3] 5, 10, 0 # Ion Z, A, E
 ParticleEnergy d 10 # Particle Kinetic Energy [MeV]
-Event s 30 # total event number
+Event s 2 # total event number
 
 ### 3-alpha event angle -1 is Angle random
 PlaneAnglePsi d -1. # Alpha plane rotate angle
@@ -45,7 +45,7 @@ bfieldZ d 1.5
 ### Electric parameters
 fixGainP10 b 1 # if the true, gain only calculate the P10 gain. (the other gas type is not calibrated yet)
 efield d 130.  # Drift Area E-field [V/cm]
-GemVolt d 340.  # Gem Voltage [V] 
+GemVolt d 280.  # Gem Voltage [V] 
 DynamicRange d 120. # Dynamic Range [fC]
 NTbs i 512  # Number of Time bucket
 TBtime d 50.  # Time Bucket [ns]
@@ -53,7 +53,7 @@ NoiseOn b false  # ADC Background on/off
 
 ### circumstance parameters 
 temperature d 20.  # [°C] // To be updated
-pressure d 760.  # [Torr] (38 ~ 760 Torr)
+pressure d 200.  # [Torr] (38 ~ 760 Torr)
 
 ### gas Type
 detMatName s p10  # Option (p10, 4He, iC4H10, 4He_iC4H10) 
