update_for_reco

--- a/at-tpc/macros/input/par_at-tpc.conf
+++ b/at-tpc/macros/input/par_at-tpc.conf
@@ -5,10 +5,10 @@ RandomEngine b true  # (true : Particle random generate) (false : Created as a f
 FastCalculate b true
 
 ### random generate particle
-RandomParticle s proton # Option (mu-, proton, alpha, ion)
+RandomParticle s mu- # Option (mu-, proton, alpha, ion)
 IonInfo i[3] 5, 10, 0 # Ion Z, A, E
-ParticleEnergy d 10. # Particle Kinetic Energy [MeV]
-Event s 60000 # total event number
+ParticleEnergy d 4000. # Particle Kinetic Energy [MeV]
+Event s 7 # total event number
 
 ### world size [mm] 
 worldX d 300. 
@@ -17,7 +17,7 @@ worldZ d 300.
 
 ### AT-TPC half size [mm]
 tpcX d 40. # 35
-tpcY d 60. # 50
+tpcY d 50. # 50
 tpcZ d 78.
 
 ### Window size [mm]
@@ -40,11 +40,12 @@ bfieldZ d 0.
 ### Electric parameters
 fixGainP10 b 1 # if the true, gain only calculate the P10 gain. (the other gas type is not calibrated yet)
 efield d 130.  # Drift Area E-field [V/cm]
-GemVolt d 305.  # Gem Voltage [V] 
+GemVolt d 330.  # Gem Voltage [V] 
 DynamicRange d 120. # Dynamic Range [fC]
 ADCThreshold d 10. # Pulse Analysis ADC threshold
 NTbs i 512  # Number of Time bucket
 TBtime d 10.  # Time Bucket [ns]
+NoiseOn b true  # ADC Background on/off
 
 ### circumstance parameters 
 temperature d 20.  # [°C] // To be updated
