--- a/at-tpc/reco_data/input/par_Exp_at-tpc.conf
+++ b/at-tpc/reco_data/input/par_Exp_at-tpc.conf
@@ -1,3 +1,7 @@
+
+### recontructed event number
+eventNum i 50
+
 ### world size [mm] 
 worldX d 300. 
 worldY d 600. 
@@ -25,6 +29,13 @@ bfieldX d 0.
 bfieldY d 0.     
 bfieldZ d 0.
 
+### Electric parameters
+efield d 130.  # Drift Area E-field [V/cm]
+GemVolt d 340.  # Gem Voltage [V] 
+DynamicRange d 120. # Dynamic Range [fC]
+NTbs i 512  # Number of Time bucket
+TBtime d 10.  # Time Bucket [ns]
+
 ### circumstance parameters 
 temperature d 20.  # [°C] // To be updated
 pressure d 760.  # [Torr] (38 ~ 760 Torr)
@@ -42,20 +53,36 @@ numAGETs i 4  # number of AGETs
 numChannelsMax i 68 # max number of channels in AGET
 
 ### PulseFinder task
-ADCThreshold d 10. # Pulse Analysis ADC threshold
+ADCThreshold d 50. # Pulse Analysis ADC threshold
 
-### LHTrackFinder parameters (for KOMAC version)
+### LHTrackFinder parameters 
+
+# 1. for new Pad planes with KOMAC 
+# LHTF_refAxis      a z   # reference axis 
+# LHTF_defaultScale d 2.5 # 
+# LHTF_trackWCutLL  d 1.  # 
+# LHTF_trackWCutHL  d 2.5 # 
+# LHTF_trackHCutLL  d 0.5  # 
+# LHTF_trackHCutHL  d 1.5 # 
+# LHTF_MinHitsToFitInit i 6 
+# LHTF_CutMinNumHitsInit i 10
+# LHTF_CutMaxNumHitsInit i 45
+# LHTF_CutMinNumHitsFinal i 10
+# LHTF_CutMinHelixRadius d 350.
+# LHTF_TrackLengthCutScale d 2.5
+# LHTF_CutdkInExpectedTrackPath d 1.
+
+# 2. for old Pad planes with cosmic muon
 LHTF_refAxis      a z   # reference axis 
 LHTF_defaultScale d 2.5 # 
-LHTF_trackWCutLL  d 1.  # 
+LHTF_trackWCutLL  d 0.1  # 
 LHTF_trackWCutHL  d 2.5 # 
-LHTF_trackHCutLL  d 0.5  # 
+LHTF_trackHCutLL  d 0.1  # 
 LHTF_trackHCutHL  d 1.5 # 
-
-LHTF_MinHitsToFitInit i 6 
-LHTF_CutMinNumHitsInit i 10
-LHTF_CutMaxNumHitsInit i 45
-LHTF_CutMinNumHitsFinal i 10
+LHTF_MinHitsToFitInit i 3 
+LHTF_CutMinNumHitsInit i 6
+LHTF_CutMaxNumHitsInit i 25
+LHTF_CutMinNumHitsFinal i 6
 LHTF_CutMinHelixRadius d 350.
 LHTF_TrackLengthCutScale d 2.5
 LHTF_CutdkInExpectedTrackPath d 1.
