--- a/newTPC/macros/input/par_NewTPC.conf
+++ b/newTPC/macros/input/par_NewTPC.conf
@@ -5,10 +5,14 @@ RandomEngine b true  # (true : Particle random generate) (false : Created as a f
 FastCalculate b true
 
 ### random generate particle
-RandomParticle s alpha # Option (mu-, proton, alpha, ion)
-IonInfo i[3] 5, 10, 0 # Ion Z, A, E
+RandomParticle s ion # Option (mu-, proton, alpha, ion)
+IonInfo i[3] 6, 12, 0 # Ion Z, A, E
 ParticleEnergy d 13 # Particle Kinetic Energy [MeV]
-Event s 6000 # total event number
+Event s 100 # total event number
+
+### Physics interaction generation
+Physics b true # Physics ineraction on-off
+PhysicsType s HoyleState # {HoyleState , etc} 
 
 ### 3-alpha event angle -1 is Angle random
 PlaneAnglePsi d -1. # Alpha plane rotate angle
@@ -40,7 +44,7 @@ padRefAxis a[] x, y  # axis of Pad Plane
 ### B-field [Tesla] 
 bfieldX d 0.     
 bfieldY d 0.     
-bfieldZ d 1.
+bfieldZ d 1.5
 
 ### Electric parameters
 fixGainP10 b 1 # if the true, gain only calculate the P10 gain. (the other gas type is not calibrated yet)
@@ -49,7 +53,7 @@ GemVolt d 300.  # Gem Voltage [V]
 DynamicRange d 120. # Dynamic Range [fC]
 ADCThreshold d 10. # Pulse Analysis ADC threshold
 NTbs i 512  # Number of Time bucket
-TBtime d 100.  # Time Bucket [ns]
+TBtime d 200.  # Time Bucket [ns]
 NoiseOn b false  # ADC Background on/off
 
 ### circumstance parameters 
