--- a/at-tpc/macros/input/par_at-tpc.conf
+++ b/at-tpc/macros/input/par_at-tpc.conf
@@ -8,7 +8,7 @@ FastCalculate b true
 RandomParticle s mu- # Option (mu-, proton, alpha, ion)
 IonInfo i[3] 5, 10, 0 # Ion Z, A, E
 ParticleEnergy d 4000. # Particle Kinetic Energy [MeV]
-Event s 7 # total event number
+Event s 10 # total event number
 
 ### world size [mm] 
 worldX d 300. 
@@ -16,15 +16,15 @@ worldY d 600.
 worldZ d 300.
 
 ### AT-TPC half size [mm]
-tpcX d 40. # 35
+tpcX d 35. # 35
 tpcY d 50. # 50
 tpcZ d 78.
 
 ### Window size [mm]
-WindowSize d[2] 100, 100  # window x, z length 130
-WindowHeight d 15  # window height  //24.7
-WindowShift d 30 # window X shift //15.125
-TriggerDistance d 110. # center of Pad to Trigger distance 450 //450.
+WindowSize d[2] 50, 200  # window x, z
+WindowHeight d 0  # window height  
+WindowShift d 0 # window X shift 
+TriggerDistance d 200. # center of Pad to Trigger distance 
 
 ### axis of direction
 tpcBFieldAxis a z  # axis of B-field direction
@@ -40,12 +40,12 @@ bfieldZ d 0.
 ### Electric parameters
 fixGainP10 b 1 # if the true, gain only calculate the P10 gain. (the other gas type is not calibrated yet)
 efield d 130.  # Drift Area E-field [V/cm]
-GemVolt d 330.  # Gem Voltage [V] 
+GemVolt d 350.  # Gem Voltage [V] 
 DynamicRange d 120. # Dynamic Range [fC]
 ADCThreshold d 10. # Pulse Analysis ADC threshold
 NTbs i 512  # Number of Time bucket
 TBtime d 10.  # Time Bucket [ns]
-NoiseOn b true  # ADC Background on/off
+NoiseOn b false  # ADC Background on/off
 
 ### circumstance parameters 
 temperature d 20.  # [°C] // To be updated
@@ -70,6 +70,6 @@ LHTF_MinHitsToFitInit i 6
 LHTF_CutMinNumHitsInit i 10
 LHTF_CutMaxNumHitsInit i 45
 LHTF_CutMinNumHitsFinal i 10
-LHTF_CutMinHelixRadius d 350.
+LHTF_CutMinHelixRadius d 800.
 LHTF_TrackLengthCutScale d 2.5
 LHTF_CutdkInExpectedTrackPath d 1.
