--- a/newTPC/macros/input/par_NewTPC.conf
+++ b/newTPC/macros/input/par_NewTPC.conf
@@ -7,8 +7,8 @@ FastCalculate b true
 ### random generate particle
 RandomParticle s ion # Option (mu-, proton, alpha, ion)
 IonInfo i[3] 6, 12, 0 # Ion Z, A, E
-ParticleEnergy d 13 # Particle Kinetic Energy [MeV]
-Event s 100 # total event number
+ParticleEnergy d 3 # Particle Kinetic Energy [MeV]
+Event s 10 # total event number
 
 ### Physics interaction generation
 Physics b true # Physics ineraction on-off
@@ -44,12 +44,12 @@ padRefAxis a[] x, y  # axis of Pad Plane
 ### B-field [Tesla] 
 bfieldX d 0.     
 bfieldY d 0.     
-bfieldZ d 1.5
+bfieldZ d 0.
 
 ### Electric parameters
 fixGainP10 b 1 # if the true, gain only calculate the P10 gain. (the other gas type is not calibrated yet)
 efield d 130.  # Drift Area E-field [V/cm]
-GemVolt d 300.  # Gem Voltage [V] 
+GemVolt d 320.  # Gem Voltage [V] 
 DynamicRange d 120. # Dynamic Range [fC]
 ADCThreshold d 10. # Pulse Analysis ADC threshold
 NTbs i 512  # Number of Time bucket
