--- a/at-tpc/reco_data/input/par_Exp_at-tpc.conf
+++ b/at-tpc/reco_data/input/par_Exp_at-tpc.conf
@@ -1,4 +1,3 @@
-
 ### recontructed event number
 eventNum i 50
 
@@ -8,15 +7,15 @@ worldY d 600.
 worldZ d 300.
 
 ### AT-TPC half size [mm]
-tpcX d 40. # 35
-tpcY d 60. # 50
+tpcX d 35. # 35
+tpcY d 50. # 50
 tpcZ d 78.
 
 ### Window size [mm]
-WindowSize d[2] 100, 100  # window x, z length 130
-WindowHeight d 15  # window height  //24.7
-WindowShift d 30 # window X shift //15.125
-TriggerDistance d 110. # center of Pad to Trigger distance 450 //450.
+WindowSize d[2] 50, 200  # window x, z
+WindowHeight d 0  # window height  
+WindowShift d 0 # window X shift 
+TriggerDistance d 200. # center of Pad to Trigger distance 
 
 ### axis of direction
 tpcBFieldAxis a z  # axis of B-field direction
@@ -30,7 +29,7 @@ bfieldY d 0.
 bfieldZ d 0.
 
 ### Electric parameters
-efield d 130.  # Drift Area E-field [V/cm]
+efield d 150.  # Drift Area E-field [V/cm]
 GemVolt d 340.  # Gem Voltage [V] 
 DynamicRange d 120. # Dynamic Range [fC]
 NTbs i 512  # Number of Time bucket
@@ -53,7 +52,7 @@ numAGETs i 4  # number of AGETs
 numChannelsMax i 68 # max number of channels in AGET
 
 ### PulseFinder task
-ADCThreshold d 50. # Pulse Analysis ADC threshold
+ADCThreshold d 25. # Pulse Analysis ADC threshold
 
 ### LHTrackFinder parameters 
 
