--- a/at-tpc/macros/input/par_at-tpc.conf
+++ b/at-tpc/macros/input/par_at-tpc.conf
@@ -5,10 +5,13 @@ RandomEngine b true  # (true : Particle random generate) (false : Created as a f
 FastCalculate b true
 
 ### random generate particle
-RandomParticle s mu- # Option (mu-, proton, alpha, ion)
-IonInfo i[3] 5, 10, 0 # Ion Z, A, E
-ParticleEnergy d 4000. # Particle Kinetic Energy [MeV]
-Event s 7 # total event number
+RandomParticle s ion # Option (mu-, proton, alpha, ion)
+IonInfo i[3] 6, 12, 0 # Ion Z, A, E
+ParticleEnergy d 13. # Particle Kinetic Energy [MeV]
+Event s 10 # total event number
+
+Physics b true # Physics ineraction on-off
+PhysicsType s HoyleState # {HoyleState , etc} 
 
 ### world size [mm] 
 worldX d 300. 
@@ -16,15 +19,15 @@ worldY d 600.
 worldZ d 300.
 
 ### AT-TPC half size [mm]
-tpcX d 40. # 35
-tpcY d 50. # 50
-tpcZ d 78.
+tpcX d 100. # 35: 10x10 , 100: 20x20
+tpcY d 100. # 50: 10x10 , 100: 20x20
+tpcZ d 78. # 78: 10x10 , 78: 20x20
 
 ### Window size [mm]
-WindowSize d[2] 100, 100  # window x, z length 130
-WindowHeight d 15  # window height  //24.7
-WindowShift d 30 # window X shift //15.125
-TriggerDistance d 110. # center of Pad to Trigger distance 450 //450.
+WindowSize d[2] 50, 200  # window x, z
+WindowHeight d 0  # window height  
+WindowShift d 0 # window X shift 
+TriggerDistance d 200. # center of Pad to Trigger distance 
 
 ### axis of direction
 tpcBFieldAxis a z  # axis of B-field direction
@@ -35,28 +38,33 @@ padRefAxis a[] x, y  # axis of Pad Plane
 ### B-field [Tesla] 
 bfieldX d 0.     
 bfieldY d 0.     
-bfieldZ d 0.
+bfieldZ d 1.5
 
 ### Electric parameters
 fixGainP10 b 1 # if the true, gain only calculate the P10 gain. (the other gas type is not calibrated yet)
-efield d 130.  # Drift Area E-field [V/cm]
-GemVolt d 330.  # Gem Voltage [V] 
-DynamicRange d 120. # Dynamic Range [fC]
+efield d 150.  # Drift Area E-field [V/cm]
+GemVolt d 250.  # Gem Voltage [V] 
+DynamicRange d 500. # Dynamic Range [fC]
 ADCThreshold d 10. # Pulse Analysis ADC threshold
 NTbs i 512  # Number of Time bucket
-TBtime d 10.  # Time Bucket [ns]
+TBtime d 100.  # Time Bucket [ns]
 NoiseOn b true  # ADC Background on/off
 
 ### circumstance parameters 
 temperature d 20.  # [°C] // To be updated
-pressure d 760.  # [Torr] (38 ~ 760 Torr)
+pressure d 400.  # [Torr] (38 ~ 760 Torr)
 
 ### gas Type
-detMatName s p10  # Option (p10, 4He, iC4H10, 4He_iC4H10) 
+detMatName s 4He  # Option (p10, 4He, iC4H10, 4He_iC4H10) 
 iC4H10Ratio d 0. # [%] when choice the 4He+iC4H10 gas, input the iC4H10 ratio. (0.5 ~ 20%)
 
 ### pad Type
-PadPlaneType s RectanglePad # Option (RectanglePad, HoneyCombPad, 20RectanglePad, StripPad)
+PadPlaneType s 20RectanglePad # Option (RectanglePad, HoneyCombPad, 20RectanglePad, StripPad)
+
+### decoder task
+numAsAds i 1  # number of AsAds
+numAGETs i 4  # number of AGETs
+numChannelsMax i 68 # max number of channels in AGET
 
 ### LHTrackFinder parameters (for KOMAC version)
 LHTF_refAxis      a z   # reference axis 
@@ -70,6 +78,6 @@ LHTF_MinHitsToFitInit i 6
 LHTF_CutMinNumHitsInit i 10
 LHTF_CutMaxNumHitsInit i 45
 LHTF_CutMinNumHitsFinal i 10
-LHTF_CutMinHelixRadius d 350.
+LHTF_CutMinHelixRadius d 800.
 LHTF_TrackLengthCutScale d 2.5
 LHTF_CutdkInExpectedTrackPath d 1.
